--- a/project.CSS
+++ b/project.CSS
@@ -26,7 +26,7 @@ body{
     
     }
     input[type='text']:focus,
-    input[type='text']:focus
+    input[type='select']:focus
     {
         background-color: #ddd;
         outline: none;
