--- a/project.CSS
+++ b/project.CSS
@@ -10,7 +10,7 @@ body{
     margin: auto;
     width: 50%;
     padding: 17px;
-    background-color: white;
+    background-color: rgb(219, 211, 211);
     box-shadow: 20px 20px 20px 0px rgb(0, 0,0 ,0.7);
     }
     input[type='text'],
